--- a/index.html
+++ b/index.html
@@ -21,30 +21,32 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="logo-header"
-          >Web<span class="logo-header-blue">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="site-nav link">Studio</a></li>
-          <li><a href="" class="site-nav link">Portfolio</a></li>
-          <li><a href="" class="site-nav link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address style="font-style: normal" class="site-nav-address">
-        <ul class="site-nav list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="contacts link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div>
+        <nav>
+          <a href="./index.html" class="logo-header"
+            >Web<span class="logo-header-blue">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="site-nav link">Studio</a></li>
+            <li><a href="" class="site-nav link">Portfolio</a></li>
+            <li><a href="" class="site-nav link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address style="font-style: normal" class="site-nav-address">
+          <ul class="site-nav list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="contacts link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <section class="hero">
