--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div>
+    <header class="header">
+      <div class="class="header-container container">
         <nav>
           <a href="./index.html" class="logo-header"
             >Web<span class="logo-header-blue">Studio</span></a
