--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="class="header-container container">
+      <div class="header-container container">
         <nav>
           <a href="./index.html" class="logo-header"
             >Web<span class="logo-header-blue">Studio</span></a
