--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <div class="header-container container">
-        <nav>
+        <nav class="header-nav">
           <a href="./index.html" class="logo-header"
             >Web<span class="logo-header-blue">Studio</span></a
           >
