--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
       </div>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="section-banner-title">
-          Effective Solutions for Your Business
-        </h1>
-        <button type="button" class="btn-banner">Order Service</button>
-      </section>
+      <div class="container">
+        <section class="hero">
+          <h1 class="section-banner-title">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="btn-banner">Order Service</button>
+        </section>
+      </div>
       <section class="section-features">
         <h2 hidden class="section-title">Features</h2>
         <ul class="features-list list">
