--- a/index.html
+++ b/index.html
@@ -58,37 +58,39 @@
         </section>
       </div>
       <section class="section-features">
-        <h2 hidden class="section-title">Features</h2>
-        <ul class="features-list list">
-          <li>
-            <h3 class="example-header">Strategy</h3>
-            <p class="example-paragraph">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="example-header">Punctuality</h3>
-            <p class="example-paragraph">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="example-header">Diligence</h3>
-            <p class="example-paragraph">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="example-header">Technologies</h3>
-            <p class="example-paragraph">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div>
+          <h2 hidden class="section-title">Features</h2>
+          <ul class="features-list list">
+            <li>
+              <h3 class="example-header">Strategy</h3>
+              <p class="example-paragraph">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="example-header">Punctuality</h3>
+              <p class="example-paragraph">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="example-header">Diligence</h3>
+              <p class="example-paragraph">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="example-header">Technologies</h3>
+              <p class="example-paragraph">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-team">
         <h2 class="section-title">Our Team</h2>
