--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
             Effective Solutions for Your Business
           </h1>
           <button type="button" class="btn-banner">Order Service</button>
-        </div>
+        </section>
+      </div>
+      
         </section>
       <section class="section-features">
         <div>
