--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <main>
       <div class="container">
         <section class="hero">
+          <div class="container"></div>
           <h1 class="section-banner-title">
             Effective Solutions for Your Business
           </h1>
