--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
       </div>
     </header>
     <main>
-        <section class="hero">
-          <div class="container"></div>
+      <section class="hero">
+        <div class="container">
           <h1 class="section-banner-title">
             Effective Solutions for Your Business
           </h1>
           <button type="button" class="btn-banner">Order Service</button>
-          </div>
-        </section>
+        </div>
+      </section>
       <section class="section-features">
         <div>
           <h2 hidden class="section-title">Features</h2>
