--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </section>
       <section class="section-features">
-        <div>
+        <div class="container">
           <h2 hidden class="section-title">Features</h2>
           <ul class="features-list list">
             <li>
