--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <section class="section-features">
         <div class="container">
-          <h2 hidden class="section-title">Features</h2>
+          <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li>
               <h3 class="example-header">Strategy</h3>
