--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
-            <li>
+            <li class="company__item">
               <h3 class="example-header">Strategy</h3>
               <p class="example-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="company__item">
               <h3 class="example-header">Punctuality</h3>
               <p class="example-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="company__item">
               <h3 class="example-header">Diligence</h3>
               <p class="example-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="company__item">
               <h3 class="example-header">Technologies</h3>
               <p class="example-paragraph">
                 Design practice focused on digital experiences. We bring forth a
