--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
-            <li class="company__item">
+            <li class="feature-item">
               <h3 class="example-header">Strategy</h3>
               <p class="example-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li class="company__item">
+            <li class="feature-item">
               <h3 class="example-header">Punctuality</h3>
               <p class="example-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li class="company__item">
+            <li class="feature-item">
               <h3 class="example-header">Diligence</h3>
               <p class="example-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li class="company__item">
+            <li class="feature-item">
               <h3 class="example-header">Technologies</h3>
               <p class="example-paragraph">
                 Design practice focused on digital experiences. We bring forth a
@@ -93,49 +93,51 @@
         </div>
       </section>
       <section class="section-team">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list">
-          <li class="section-list">
-            <img
-              src="./images/team-card1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Mark Guerrero</h3>
-            <p class="section-team-text">Product Designer</p>
-          </li>
-          <li class="section-list">
-            <img
-              src="./images/team-card2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Tom Ford</h3>
-            <p class="section-team-text">Frontend Developer</p>
-          </li>
-          <li class="section-list">
-            <img
-              src="./images/team-card3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Camila Garcia</h3>
-            <p class="section-team-text">Marketing</p>
-          </li>
-          <li class="section-list">
-            <img
-              src="./images/team-card4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Daniel Wilson</h3>
-            <p class="section-team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
+          <ul class="list">
+            <li class="section-list">
+              <img
+                src="./images/team-card1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Mark Guerrero</h3>
+              <p class="section-team-text">Product Designer</p>
+            </li>
+            <li class="section-list">
+              <img
+                src="./images/team-card2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Tom Ford</h3>
+              <p class="section-team-text">Frontend Developer</p>
+            </li>
+            <li class="section-list">
+              <img
+                src="./images/team-card3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Camila Garcia</h3>
+              <p class="section-team-text">Marketing</p>
+            </li>
+            <li class="section-list">
+              <img
+                src="./images/team-card4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Daniel Wilson</h3>
+              <p class="section-team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="section-portfolio">
         <h2 class="section-title">Our Portfolio</h2>
