--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
+              bhbd
             </li>
             <li class="feature-item">
               <h3 class="example-header">Diligence</h3>
@@ -95,7 +96,7 @@
       <section class="section-team">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul class="list">
+          <ul class="team__list list">
             <li class="section-list">
               <img
                 src="./images/team-card1.jpg"
