--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Mark Guerrero</h3>
-              <p class="section-team-text">Product Designer</p>
+              <div class="team__wrapper">
+                <h3 class="card-title">Mark Guerrero</h3>
+                <p class="section-team-text">Product Designer</p>
+              </div>
             </li>
             <li class="section-list">
               <img
@@ -113,8 +115,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Tom Ford</h3>
-              <p class="section-team-text">Frontend Developer</p>
+              <div class="team__wrapper">
+                <h3 class="card-title">Tom Ford</h3>
+                <p class="section-team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-list">
               <img
@@ -123,8 +127,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Camila Garcia</h3>
-              <p class="section-team-text">Marketing</p>
+              <div class="team__wrapper">
+                <h3 class="card-title">Camila Garcia</h3>
+                <p class="section-team-text">Marketing</p>
+              </div>
             </li>
             <li class="section-list">
               <img
@@ -133,8 +139,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="card-title">Daniel Wilson</h3>
-              <p class="section-team-text">UI Designer</p>
+              <div class="team__wrapper">
+                <h3 class="card-title">Daniel Wilson</h3>
+                <p class="section-team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
