--- a/index.html
+++ b/index.html
@@ -148,69 +148,71 @@
         </div>
       </section>
       <section class="section-portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="nav-gallery list">
-          <li>
-            <img
-              src="./images/portfolio-img1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300"
-            />
-            <h3 class="gallery-list-title">Banking App</h3>
-            <p class="gallery-list-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300"
-            />
-            <h3 class="gallery-list-title">Cashless Payment</h3>
-            <p class="gallery-list-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300"
-            />
-            <h3 class="gallery-list-title">Meditation App</h3>
-            <p class="gallery-list-text">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300"
-            />
-            <h3 class="gallery-list-title">Taxi Service</h3>
-            <p class="gallery-list-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300"
-            />
-            <h3 class="gallery-list-title">Screen Illustrations</h3>
-            <p class="gallery-list-text">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio-img6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300"
-            />
-            <h3 class="gallery-list-title">Online Courses</h3>
-            <p class="gallery-list-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
+          <ul class="nav-gallery list">
+            <li>
+              <img
+                src="./images/portfolio-img1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3 class="gallery-list-title">Banking App</h3>
+              <p class="gallery-list-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3 class="gallery-list-title">Cashless Payment</h3>
+              <p class="gallery-list-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3 class="gallery-list-title">Meditation App</h3>
+              <p class="gallery-list-text">App</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3 class="gallery-list-title">Taxi Service</h3>
+              <p class="gallery-list-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3 class="gallery-list-title">Screen Illustrations</h3>
+              <p class="gallery-list-text">Design</p>
+            </li>
+            <li>
+              <img
+                src="./images/portfolio-img6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3 class="gallery-list-title">Online Courses</h3>
+              <p class="gallery-list-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <section class="Dark-bg">
