--- a/index.html
+++ b/index.html
@@ -151,65 +151,77 @@
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="nav-gallery list">
-            <li>
+            <li class="gallery__image">
               <img
                 src="./images/portfolio-img1.jpg"
                 alt="Banking App"
                 width="360"
                 height="300"
               />
-              <h3 class="gallery-list-title">Banking App</h3>
-              <p class="gallery-list-text">App</p>
+              <div class="gallery__wrapper">
+                <h3 class="gallery-list-title">Banking App</h3>
+                <p class="gallery-list-text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="gallery__image">
               <img
                 src="./images/portfolio-img2.jpg"
                 alt="Cashless Payment"
                 width="360"
                 height="300"
               />
-              <h3 class="gallery-list-title">Cashless Payment</h3>
-              <p class="gallery-list-text">Marketing</p>
+              <div class="gallery__wrapper">
+                <h3 class="gallery-list-title">Cashless Payment</h3>
+                <p class="gallery-list-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="gallery__image">
               <img
                 src="./images/portfolio-img3.jpg"
                 alt="Meditation App"
                 width="360"
                 height="300"
               />
-              <h3 class="gallery-list-title">Meditation App</h3>
-              <p class="gallery-list-text">App</p>
+              <div class="gallery__wrapper">
+                <h3 class="gallery-list-title">Meditation App</h3>
+                <p class="gallery-list-text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="gallery__image">
               <img
                 src="./images/portfolio-img4.jpg"
                 alt="Taxi Service"
                 width="360"
                 height="300"
               />
-              <h3 class="gallery-list-title">Taxi Service</h3>
-              <p class="gallery-list-text">Marketing</p>
+              <div class="gallery__wrapper">
+                <h3 class="gallery-list-title">Taxi Service</h3>
+                <p class="gallery-list-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="gallery__image">
               <img
                 src="./images/portfolio-img5.jpg"
                 alt="Screen Illustrations"
                 width="360"
                 height="300"
               />
-              <h3 class="gallery-list-title">Screen Illustrations</h3>
-              <p class="gallery-list-text">Design</p>
+              <div class="gallery__wrapper">
+                <h3 class="gallery-list-title">Screen Illustrations</h3>
+                <p class="gallery-list-text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="gallery__image">
               <img
                 src="./images/portfolio-img6.jpg"
                 alt="Online Courses"
                 width="360"
                 height="300"
               />
-              <h3 class="gallery-list-title">Online Courses</h3>
-              <p class="gallery-list-text">Marketing</p>
+              <div class="gallery__wrapper">
+                <h3 class="gallery-list-title">Online Courses</h3>
+                <p class="gallery-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
