--- a/index.html
+++ b/index.html
@@ -229,13 +229,15 @@
     </main>
     <section class="Dark-bg">
       <footer class="section-address">
-        <a href="./index.html" class="logo-header link">
-          Web<span class="logo-header-white">Studio</span></a
-        >
-        <p class="par">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="container">
+          <a href="./index.html" class="footer__logo-blue link">
+            Web<span class="footer__logo-white">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
       </footer>
     </section>
   </body>
