--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
       <div class="header-container container">
         <nav class="header-nav">
-          <a href="./index.html" class="logo-header"
+          <a href="./index.html" class="logo-header link"
             >Web<span class="logo-header-blue">Studio</span></a
           >
           <ul class="site-nav list">
